# NASA-backend

./: .env.example  .gitignore  Dockerfile  OCEAN_DATA_API.md  OCEAN_DATA_READY.md  README.md  comprehensive_shark_ocean_features - comprehensive_shark_ocean_features.csv  data_processor.py  docker-compose.dev.yml  docker-compose.yml  main.py  merge_shark_data.py  merged_shark_ocean_data.csv  pyproject.toml  requirements.txt  shark_rf_model_round_18.joblib  simple_api.py  simple_main.py  simple_ocean_query.py  start.sh  test_13_features.csv  test_api.py  test_data_engineering.py  test_main.py  test_ml_model.py  test_ocean_data.py  test_real_data.py  v8.1_comprehensive_shark_features.csv  v8.1_standardized_random_features.csv
app/core/: config.py
app/routers/: __init__.py  auth.py  items.py  ml_prediction.py  ml_prediction_advanced.py  ml_prediction_enhanced.py  ml_prediction_simple.py  ocean_data.py  ocean_data_simple.py  users.py
app/schemas/: auth.py  item.py  ocean_data.py  user.py
app/services/: auth_service.py  ocean_data_service.py
tests/: test_main.py
